--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
-pandas == 2.2.3
-numpy == 2.0.2
-matplotlib == 3.10.3
-scikit-learn == 1.6.0
-seaborn == 0.13.0
+pandas
+numpy
+matplotlib
+scikit-learn
+seaborn
+streamlit
+extra-streamlit-components
+
+
+google-genai
+python-dotenv
+pytest
+sqlalchemy
+psycopg2-binary
